fixed aspect ratio of players on mobile devices

--- a/sass/video-player.scss
+++ b/sass/video-player.scss
@@ -2,14 +2,12 @@
     // this will hold the video player superposed with the controls section
 
     position: relative;
-    width: 100%;
-    height: 100%;
-    min-width: 500px;
-    min-height: 400px;
+    min-width: 300px;
+    max-width: 1200px;
+    aspect-ratio: 16/9;
 
     #video-player {
         // this will hold the video player
-
         width: 100%;
         height: 100%;
         position: absolute;
@@ -55,16 +53,26 @@
                 position: absolute;
                 top: 0;
                 bottom: 0;
+                margin: auto 0;
             }
 
             #seek-bar {
                 z-index: 1002;
-                opacity: 0.7;
+                opacity: 0.6;
                 border-radius: 4px;
-
-                margin: auto 0;
+                left: 0;
+                right: 0;
                 height: 12px;
                 cursor: pointer;
+            }
+
+            #progress-bar-download-buffer {
+                z-index: 1001;
+                width: 0;
+                background-color: #272727;
+                height: 4px;
+                left: 6px;
+                right: 6px;
             }
             
         }
